--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ a {
 ul,
 ol {
   list-style: none;
+  list-style-type: none;
   margin: 0;
   padding-left: 0;
 }
@@ -274,8 +275,10 @@ p {
 /* Team */
 .team {
   background: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .title {
@@ -291,11 +294,15 @@ p {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* gap: 24px; */
+  gap: 72px;
 }
 
 .team-item {
-  width: calc((100% - 3 * 24px) / 4);
+  /* width: calc((100% - 3 * 24px) / 4); */
+  width: 264px;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -359,10 +366,14 @@ p {
 .team-lin-icon:focus {
   background-color: #404bbf;
 }
+
 /* Portfolio */
+
 .portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .title {
@@ -370,13 +381,13 @@ p {
 
 .portfolio-list {
   display: flex;
-  column-gap: 24px;
-  row-gap: 48px;
   flex-wrap: wrap;
+  gap: 48px;
 }
 
 .portfolio-item {
-  width: calc((100% - 2 * 24px) / 3);
+  /* width: calc((100% - 2 * 24px) / 3); */
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -425,7 +436,6 @@ p {
   color: #f4f4fd;
   background: #4d5ae5;
   height: 100%;
-  /* box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
   padding: 40px 32px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -808,6 +818,28 @@ p {
   .principles-subtitle {
     text-align: left;
   }
+  /* =============== */
+  .team {
+    padding-top: 104px;
+  }
+  .team .container {
+    max-width: 584px;
+  }
+  .team-item {
+    /* width: 264px; */
+    width: calc((100% - 24px) / 2);
+  }
+  .team-list {
+    gap: 64px 24px;
+    justify-content: center;
+  }
+  /* =================== */
+  .portfolio-item {
+    width: calc((100% - 24px) / 2);
+  }
+  .portfolio-list {
+    gap: 72px 24px;
+  }
 }
 
 @media screen and (min-width: 1158px) {
@@ -846,4 +878,29 @@ p {
     justify-content: center;
     margin-bottom: 8px;
   }
+  /* =========================== */
+  .team .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+  .team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .team-list {
+    gap: 24px;
+  }
+  .team-item {
+    width: calc((100% - 3 * 24px) / 4);
+  }
+  /* ============================== */
+  .portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .portfolio-list {
+    gap: 48px 24px;
+  }
+  .portfolio-item {
+  width: calc((100% - 2 * 24px) / 3);
 }
