--- a/css/styles.css
+++ b/css/styles.css
@@ -99,13 +99,17 @@ p {
   border: none;
   fill: #2f2f37;
 }
+
 /* mob-menu */
+
 .mob-menu {
   position: fixed;
   top: 0;
   background-color: #fff;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
   padding-top: 24px;
   padding-right: 24px;
   padding-bottom: 40px;
@@ -121,8 +125,8 @@ p {
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  background-color: #e7e9fc;
-  border-color: rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  border-color: #e7e9fc;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -160,6 +164,9 @@ p {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.mob-current {
+  color: #404bbf;
+}
 .mob-address-item-link:not(:last-child) {
   margin-bottom: 24px;
 }
@@ -173,6 +180,10 @@ p {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
+}
+
+.mob-address-link-cur {
+  color: #4d5ae5;
 }
 .mob-item-list {
   display: flex;
@@ -680,15 +691,18 @@ p {
 .modal {
   position: absolute;
   border-radius: 4px;
-  width: 408px;
-  min-height: 584px;
+  /* width: 408px; */
+  width: 288px;
+  /* min-height: 584px; */
+  height: 623px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 72px 24px 24px 24px;
+  /* padding: 72px 24px 24px 24px; */
+  padding: 72px 16px 24px 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -734,8 +748,9 @@ p {
   text-align: center;
   color: #2e2f42;
   /* margin-top: 72px; */
-  min-width: 360px;
+  /* min-width: 360px; */
   margin-bottom: 16px;
+  display: block;
 }
 
 .modal-input {
