--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,9 @@ p {
 
 .mob-menu {
   position: fixed;
+  z-index: 999;
   top: 0;
+  left: 0;
   background-color: #fff;
   width: 100vw;
   height: 100%;
