--- a/css/styles.css
+++ b/css/styles.css
@@ -693,9 +693,7 @@ p {
 .modal {
   position: absolute;
   border-radius: 4px;
-  /* width: 408px; */
   width: 288px;
-  /* min-height: 584px; */
   height: 623px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -703,7 +701,6 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* padding: 72px 24px 24px 24px; */
   padding: 72px 16px 24px 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -749,8 +746,6 @@ p {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  /* margin-top: 72px; */
-  /* min-width: 360px; */
   margin-bottom: 16px;
   display: block;
 }
@@ -784,7 +779,6 @@ p {
 
 .modal-icon {
   position: absolute;
-  /* fill: #2e2f42; */
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
@@ -965,6 +959,10 @@ p {
   .address-link:focus {
     color: #404bbf;
   }
+  /* ================= */
+  .mob-menu {
+    display: none;
+  }
   /* ====================== */
   .solutions {
     padding: 112px 136px;
@@ -1064,9 +1062,15 @@ p {
   .footer-sub-con {
     gap: 24px;
   }
-}
-/* =============================== */
 
+  /* =============================== */
+  .modal {
+    width: 408px;
+    height: 584px;
+    padding: 72px 24px 24px 24px;
+  }
+}
+/* ================================= */
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
@@ -1189,4 +1193,5 @@ p {
   .footer-test {
     margin-bottom: 0;
   }
+  /* =================== */
 }
